# indextts2-inference

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  test_inference.py
.github/workflows/: ci.yml  release.yml
indextts/: __init__.py  emotion.py  infer_v2.py  logging.py
indextts/accel/: accel_engine.py
indextts/gpt/: model_v2.py  perceiver.py
indextts/s2mel/dac/: __init__.py
indextts/s2mel/dac/nn/: quantize.py
indextts/s2mel/modules/: audio.py  commons.py
indextts/s2mel/modules/bigvgan/: bigvgan.py  utils.py
indextts/s2mel/modules/bigvgan/alias_free_activation/cuda/: load.py
indextts/utils/: common.py  front.py  maskgct_utils.py
indextts/utils/maskgct/models/codec/kmeans/: repcodec_model.py
indextts/utils/maskgct/models/tts/maskgct/: maskgct_s2a.py
tests/: test_common.py  test_emotion.py  test_front.py  test_typical_sampling.py
