[project]
name = "index-tts-inference"
version = "0.1.0"
description = "IndexTTS2 inference library: zero-shot text-to-speech with emotional control"
authors = [{ name = "Bilibili IndexTTS Team" }]
license = "LicenseRef-Bilibili-IndexTTS"
license-files = ["LICEN[CS]E*", "INDEX_MODEL_LICENSE*"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Natural Language :: English",
  "Natural Language :: Chinese (Simplified)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "torchaudio>=2.0",
  "torchcodec>=0.10",
  "transformers>=4.52,<4.53",
  "safetensors>=0.4",
  "accelerate>=1.0",
  "huggingface_hub>=0.20",
  "librosa>=0.10",
  "omegaconf>=2.3",
  "einops>=0.8",
  "sentencepiece>=0.2",
  "tokenizers>=0.19",
  "jieba>=0.42",
  "g2p-en>=2.1",
  "cn2an>=0.5",
  "json5>=0.9",
  "munch>=4.0",
  "tqdm>=4.60",
  "wetext>=0.0.9",
]

[project.optional-dependencies]
es = [
  "nemo-text-processing>=1.1",
]
flash-attn = [
  "flash-attn>=2.1",
]
deepspeed = [
  "deepspeed>=0.14",
]

[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indextts"]

[tool.uv]
no-build-isolation-package = ["deepspeed", "flash-attn"]
