[project]
name = "indextts2-inference"
version = "2.0.2"
description = "IndexTTS2 inference library: zero-shot text-to-speech with emotional control"
readme = "README.md"
authors = [{ name = "Bilibili IndexTTS Team" }]
license = "LicenseRef-Bilibili-IndexTTS"
license-files = ["LICEN[CS]E*", "INDEX_MODEL_LICENSE*"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Natural Language :: English",
  "Natural Language :: Chinese (Simplified)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "torchaudio>=2.0",
  "torchcodec>=0.10",
  "transformers>=5.0",
  "safetensors>=0.4",
  "accelerate>=1.0",
  "huggingface_hub>=0.20",
  "librosa>=0.10",
  "omegaconf>=2.3",
  "einops>=0.8",
  "sentencepiece>=0.2",
  "tokenizers>=0.19",
  "jieba>=0.42",
  "g2p-en>=2.1",
  "cn2an>=0.5",
  "json5>=0.9",
  "munch>=4.0",
  "tqdm>=4.60",
  "wetext>=0.0.9",
]

[project.optional-dependencies]
es = [
  "nemo-text-processing>=1.1",
]
flash-attn = [
  "flash-attn>=2.1",
]
sage-attn = [
  "sageattention>=1.0",
]
deepspeed = [
  "deepspeed>=0.14",
]

[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indextts"]

[dependency-groups]
dev = ["ruff>=0.11"]
test = ["pytest>=8.0", "pytest-cov>=6.0"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "indextts/gpt/",
    "indextts/s2mel/",
    "indextts/utils/maskgct*/",
    "indextts/utils/xtransformers.py",
    "indextts/accel/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E402"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
no-build-isolation-package = ["deepspeed", "flash-attn", "pynini"]
override-dependencies = ["pynini>=2.1.7"]
